--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <!-- Шапка -->
@@ -35,81 +35,95 @@
     <main>
     <!-- Герой -->
         <section class="hero">
-            <div class="conteiner">
-                <h1 class="hero-title">Эффективные решения <br /> для вашего бизнеса</h1>
-                <button type="button" class="hero-button">Заказать услугу</button>
+            <div class="section">
+                <div class="conteiner">
+                    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                    <button type="button" class="hero-button">Заказать услугу</button>
+                </div>
             </div>
         </section>
     <!-- Особенности -->
-        <section class="feature conteiner">       
-            <ul class="feature-list">
-                <li class="item">
-                    <h3 class="feature-title">Внимание к деталям</h3>
-                    <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="item">
-                    <h3 class="feature-title">Пунктуальность</h3>
-                    <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li class="item">
-                    <h3 class="feature-title">Планирование</h3>
-                    <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="item">
-                    <h3 class="feature-title">Современные технологии</h3>
-                    <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
+        <section class="feature">   
+            <div class="section">
+                <div class="conteiner">
+                    <h2>Особенности</h2>    
+                    <ul class="feature-list">
+                        <li class="item">
+                            <h3 class="feature-title">Внимание к деталям</h3>
+                            <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        </li>
+                        <li class="item">
+                            <h3 class="feature-title">Пунктуальность</h3>
+                            <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        </li>
+                        <li class="item">
+                            <h3 class="feature-title">Планирование</h3>
+                            <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        </li>
+                        <li class="item">
+                            <h3 class="feature-title">Современные технологии</h3>
+                            <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     <!-- Чем мы занимаемся -->
-        <section class="work conteiner">
-            <h2 class="work-title">Чем мы занимаемся</h2>
-            <ul class="work-list">
-                <li class="item"><img src="./image/pc.jpg" alt="pc" width="370"></li>
-                <li class="item"><img src="./image/phone.jpg" alt="phone" width="370"></li>
-                <li class="item"><img src="./image/tablet.jpg" alt="tablet" width="370"></li>
+        <section class="work">
+            <div class="section">
+                <div class="conteiner">
+                    <h2 class="work-title">Чем мы занимаемся</h2>
+                    <ul class="work-list">
+                        <li class="item"><img src="./image/pc.jpg" alt="pc" width="370"></li>
+                        <li class="item"><img src="./image/phone.jpg" alt="phone" width="370"></li>
+                        <li class="item"><img src="./image/tablet.jpg" alt="tablet" width="370"></li>
+                    </ul>
+                </div>
+            </div>
         </section>
     <!-- Наша команда -->
         <section class="team">
-            <div class="conteiner">
-                <h2 class="team-title">Наша команда</h2>
+            <div class="section">
+                <div class="conteiner">
+                    <h2 class="team-title">Наша команда</h2>
                     <ul class="team-flex">
-                            <li class="item">
-                                <img src="./image/igor.jpg" alt="Игорь Демьяненко" width="270">
-                                <h3 class="team-people">Игорь Демьяненко</h3>
-                                <p class="team-text">Product Designer</p>
-                            </li>
-                            <li class="item">
-                                <img src="./image/olga.jpg" alt="Ольга Репина" width="270">
-                                <h3 class="team-people">Ольга Репина</h3>
-                                <p class="team-text">Frontend Developer</p>
-                            </li>
-                            <li class="item">
-                                <img src="./image/nikolai.jpg" alt="Николай Тарасов" width="270">
-                                <h3 class="team-people">Николай Тарасов</h3>
-                                <p class="team-text">Marketing</p>
-                            </li>
-                            <li class="item">
-                                <img src="./image/mihail.jpg" alt="Михаил Ермаков" width="270">
-                                <h3 class="team-people">Михаил Ермаков</h3>
-                                <p class="team-text">UI Designer</p>
-                            </li>
+                        <li class="item">
+                            <img src="./image/igor.jpg" alt="Игорь Демьяненко" width="270">
+                            <h3 class="team-people">Игорь Демьяненко</h3>
+                            <p class="team-text">Product Designer</p>
+                        </li>
+                        <li class="item">
+                            <img src="./image/olga.jpg" alt="Ольга Репина" width="270">
+                            <h3 class="team-people">Ольга Репина</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </li>
+                        <li class="item">
+                            <img src="./image/nikolai.jpg" alt="Николай Тарасов" width="270">
+                            <h3 class="team-people">Николай Тарасов</h3>
+                            <p class="team-text">Marketing</p>
+                        </li>
+                        <li class="item">
+                            <img src="./image/mihail.jpg" alt="Михаил Ермаков" width="270">
+                            <h3 class="team-people">Михаил Ермаков</h3>
+                            <p class="team-text">UI Designer</p>
+                        </li>
                     </ul>
+                </div>
             </div>
         </section>
     </main>
 <!-- Подвал -->
     <footer class="footer">
         <div class="conteiner">
-        <a href="./index.html" class="logo-footer"><span>Web</span>Studio</a>
-        <address>
-            <ul>          
-                <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
-                <li class="address"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-                <li class="address"><a href="tel:+380991111111" class="contact-link">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+            <a href="./index.html" class="logo-footer"><span>Web</span>Studio</a>
+            <address>
+                <ul class="contact">          
+                    <li class="item"><a href="https://goo.gl/maps/twE77rKZQX3kb6928" class="contact-address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="item"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+                    <li class="item"><a href="tel:+380991111111" class="contact-link">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
         </div>
-    </footer>    
+    </footer>  
 </body>
 </html>
