--- a/index.html
+++ b/index.html
@@ -35,16 +35,13 @@
     <main>
     <!-- Герой -->
         <section class="hero">
-            <div class="section">
                 <div class="conteiner">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                     <button type="button" class="hero-button">Заказать услугу</button>
                 </div>
-            </div>
         </section>
     <!-- Особенности -->
-        <section class="feature">   
-            <div class="section">
+        <section class="feature section">   
                 <div class="conteiner">
                     <h2>Особенности</h2>    
                     <ul class="feature-list">
@@ -66,11 +63,9 @@
                         </li>
                     </ul>
                 </div>
-            </div>
         </section>
     <!-- Чем мы занимаемся -->
-        <section class="work">
-            <div class="section">
+        <section class="work section">
                 <div class="conteiner">
                     <h2 class="work-title">Чем мы занимаемся</h2>
                     <ul class="work-list">
@@ -79,11 +74,9 @@
                         <li class="item"><img src="./image/tablet.jpg" alt="tablet" width="370"></li>
                     </ul>
                 </div>
-            </div>
         </section>
     <!-- Наша команда -->
-        <section class="team">
-            <div class="section">
+        <section class="team section">
                 <div class="conteiner">
                     <h2 class="team-title">Наша команда</h2>
                     <ul class="team-flex">
@@ -109,7 +102,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
         </section>
     </main>
 <!-- Подвал -->
