--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,6 @@
 <!-- Шапка -->
     <header class="page-header">
         <div class="conteiner">
-
             <nav class="site-nav">
                 <a href="./index.html" class="logo"><span>Web</span>Studio</a>
                 <ul class="page-nav">
@@ -35,8 +34,8 @@
     </header>
         <main>
             <!-- PROJECT -->
-            <section class="project conteiner">
-                <div class="section">
+            <section class="project section">
+                <div class="conteiner ">
                     <ul class="project-button">
                         <li class="item"><button type="button" class="button-nav">Все</button></li>
                         <li class="item"><button type="button" class="button-nav">Веб-сайты</button></li>
